// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchBar render - box 1`] = `
<div
  class="euiFlexGroup emotion-euiFlexGroup-responsive-wrap-s-flexStart-center-row"
>
  <div
    class="euiFlexItem euiSearchBar__searchHolder emotion-euiFlexItem-grow-1-euiSearchBar__searchHolder"
  >
    <div
      class="euiFormControlLayout emotion-euiFormControlLayout-fullWidth"
    >
      <div
        class="euiFormControlLayout__childrenWrapper emotion-euiFormControlLayout__childrenWrapper"
        style="--euiFormControlLeftIconsCount: 1;"
      >
        <div
          class="euiFormControlLayoutIcons emotion-euiFormControlLayoutIcons-absolute-left"
        >
          <span
            class="euiFormControlLayoutCustomIcon emotion-euiFormControlLayoutCustomIcon"
          >
            <span
              aria-hidden="true"
              class="euiFormControlLayoutCustomIcon__icon"
              data-euiicon-type="search"
            />
          </span>
        </div>
        <input
          aria-label="aria-label"
          class="euiFieldSearch testClass1 testClass2 emotion-euiFieldSearch-fullWidth-euiTestCss"
          data-test-subj="test subject string"
          placeholder="find something..."
          type="search"
          value=""
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`SearchBar render - no config, no query 1`] = `
<div
  class="euiFlexGroup emotion-euiFlexGroup-responsive-wrap-s-flexStart-center-row"
>
  <div
    class="euiFlexItem euiSearchBar__searchHolder emotion-euiFlexItem-grow-1-euiSearchBar__searchHolder"
  >
    <div
      class="euiFormControlLayout emotion-euiFormControlLayout-fullWidth"
    >
      <div
        class="euiFormControlLayout__childrenWrapper emotion-euiFormControlLayout__childrenWrapper"
        style="--euiFormControlLeftIconsCount: 1;"
      >
        <div
          class="euiFormControlLayoutIcons emotion-euiFormControlLayoutIcons-absolute-left"
        >
          <span
            class="euiFormControlLayoutCustomIcon emotion-euiFormControlLayoutCustomIcon"
          >
            <span
              aria-hidden="true"
              class="euiFormControlLayoutCustomIcon__icon"
              data-euiicon-type="search"
            />
          </span>
        </div>
        <input
          aria-label="This is a search bar. After typing your query, hit enter to filter the results lower in the page."
          class="euiFieldSearch emotion-euiFieldSearch-fullWidth"
          placeholder="Search..."
          type="search"
          value=""
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`SearchBar render - provided query, filters 1`] = `
<div
  class="euiFlexGroup emotion-euiFlexGroup-responsive-wrap-s-flexStart-center-row"
>
  <div
    class="euiFlexItem euiSearchBar__searchHolder emotion-euiFlexItem-grow-1-euiSearchBar__searchHolder"
  >
    <div
      class="euiFormControlLayout emotion-euiFormControlLayout-fullWidth"
    >
      <div
        class="euiFormControlLayout__childrenWrapper emotion-euiFormControlLayout__childrenWrapper"
        style="--euiFormControlLeftIconsCount: 1; --euiFormControlRightIconsCount: 1;"
      >
        <div
          class="euiFormControlLayoutIcons emotion-euiFormControlLayoutIcons-absolute-left"
        >
          <span
            class="euiFormControlLayoutCustomIcon emotion-euiFormControlLayoutCustomIcon"
          >
            <span
              aria-hidden="true"
              class="euiFormControlLayoutCustomIcon__icon"
              data-euiicon-type="search"
            />
          </span>
        </div>
        <input
          aria-label="This is a search bar. After typing your query, hit enter to filter the results lower in the page."
          class="euiFieldSearch euiFieldSearch-isClearable emotion-euiFieldSearch-fullWidth"
          placeholder="Search..."
          type="search"
          value="this is a query"
        />
        <div
          class="euiFormControlLayoutIcons emotion-euiFormControlLayoutIcons-absolute-right"
        >
          <button
            aria-label="Clear search input"
            class="euiFormControlLayoutClearButton emotion-euiFormControlLayoutClearButton"
            data-test-subj="clearSearchButton"
            type="button"
          >
            <span
              class="euiFormControlLayoutClearButton__icon emotion-euiFormControlLayoutClearButton__icon-m"
              data-euiicon-type="cross"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    class="euiFlexItem euiSearchBar__filtersHolder emotion-euiFlexItem-growZero-euiSearchBar__filtersHolder"
  >
    <div
      class="euiFilterGroup emotion-euiFilterGroup-uncompressed"
    >
      <div
        class="euiFilterButton__wrapper css-1nn8k4u-wrapper-hasToggle"
      >
        <button
          aria-pressed="false"
          class="euiButtonGroupButton euiFilterButton euiFilterButton-isToggle emotion-euiButtonDisplay-s-defaultMinWidth-euiButtonGroupButton-compressed-empty-text-euiFilterButton-toggle"
          data-test-subj="filter-button_generated-id"
          type="button"
        >
          <span
            class="emotion-euiButtonDisplayContent-euiButtonGroupButton__content-compressed-euiFilterButton__content"
          >
            <span
              class="euiFilterButton__text emotion-euiFilterButton__text"
              data-text="Open"
              title="Open"
            >
              Open
            </span>
          </span>
        </button>
      </div>
      <div
        class="euiPopover emotion-euiPopover-inline-block"
      >
        <div
          class="euiFilterButton__wrapper css-ln4f6z-wrapper"
        >
          <button
            aria-expanded="false"
            aria-label="Tag Selection"
            class="euiButtonEmpty euiFilterButton emotion-euiButtonDisplay-euiButtonEmpty-m-empty-text-euiFilterButton-default"
            type="button"
          >
            <span
              class="euiButtonEmpty__content emotion-euiButtonDisplayContent-euiFilterButton__content-hasIcon"
            >
              <span
                class="euiFilterButton__text emotion-euiFilterButton__text"
                data-text="Tag"
                title="Tag"
              >
                Tag
              </span>
              <span
                color="inherit"
                data-euiicon-type="arrowDown"
              />
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SearchBar render - tools 1`] = `
<div
  class="euiFlexGroup emotion-euiFlexGroup-responsive-wrap-s-flexStart-center-row"
>
  <div
    class="euiFlexItem emotion-euiFlexItem-growZero"
  >
    <div>
      Left
    </div>
  </div>
  <div
    class="euiFlexItem euiSearchBar__searchHolder emotion-euiFlexItem-grow-1-euiSearchBar__searchHolder"
  >
    <div
      class="euiFormControlLayout emotion-euiFormControlLayout-fullWidth"
    >
      <div
        class="euiFormControlLayout__childrenWrapper emotion-euiFormControlLayout__childrenWrapper"
        style="--euiFormControlLeftIconsCount: 1;"
      >
        <div
          class="euiFormControlLayoutIcons emotion-euiFormControlLayoutIcons-absolute-left"
        >
          <span
            class="euiFormControlLayoutCustomIcon emotion-euiFormControlLayoutCustomIcon"
          >
            <span
              aria-hidden="true"
              class="euiFormControlLayoutCustomIcon__icon"
              data-euiicon-type="search"
            />
          </span>
        </div>
        <input
          aria-label="This is a search bar. After typing your query, hit enter to filter the results lower in the page."
          class="euiFieldSearch emotion-euiFieldSearch-fullWidth"
          placeholder="Search..."
          type="search"
          value=""
        />
      </div>
    </div>
  </div>
  <div
    class="euiFlexItem emotion-euiFlexItem-growZero"
  >
    <div>
      Right
    </div>
  </div>
</div>
`;
